--- a/hyproasis/fastfetch/.config/fastfetch/config.jsonc
+++ b/hyproasis/fastfetch/.config/fastfetch/config.jsonc
@@ -2,9 +2,9 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
         "type": "file",
-        "source": "$HOME/.config/fastfetch/logos/OwO",
+        "source": "$HOME/.config/fastfetch/logos/spider",
         "color": {
-            "1": "blue"
+            "1": "red"
         },
         "padding": {
             "top": 1,
